--- a/server/package.json
+++ b/server/package.json
@@ -2,5 +2,20 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "type": "module",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
+  "license": "MIT",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "getstream": "^7.2.10",
+    "nodemon": "^2.0.12",
+    "stream-chat": "^4.1.0",
+    "twilio": "^3.67.1"
+  }
 }
